# GINKGO_Protoype

./: CMakeLists.txt  README.md  gko-evaluate-solvers.cc  main.cc  my_build.sh
